src/objects/BMCServiceDesk__SYSDashboardWidget__c.object
<CustomObject>
    <description>This object allows you to store data for the widget state of all dashboards.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSDashboardWidgets</relationshipLabel>
        <relationshipName>SYSDashboardWidgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__QuickView_Display_Order__c</fullName>
        <description>Stores the display order of QuickViews in the Console Dashboard for each user.</description>
        <label>QuickView Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <label>State</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dashboard__c</fullName>
        <label>FKDashboard</label>
        <referenceTo>BMCServiceDesk__SYSDashboard__c</referenceTo>
        <relationshipLabel>SYSDashboardWidgets</relationshipLabel>
        <relationshipName>SYSDashboardWidgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isFullWidth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a QuickView should be spanned across the width of the Console Dashboard.</description>
        <label>Span Full Width</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__xPos__c</fullName>
        <label>XPos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__yPos__c</fullName>
        <label>YPos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dashboard Widget</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSDashboardWidgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>